# Slimefun-Rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/slimefun-addons/: Cargo.toml
crates/slimefun-addons/src/: all_addons.rs  fluffy_machines.rs  lib.rs  networks.rs  supreme.rs
crates/slimefun-cargo/: Cargo.toml
crates/slimefun-cargo/src/: lib.rs
crates/slimefun-core/: Cargo.toml
crates/slimefun-core/src/: block_storage.rs  items.rs  lib.rs  ticker.rs
crates/slimefun-energy/: Cargo.toml
crates/slimefun-energy/src/: lib.rs
crates/slimefun-ffi/: Cargo.toml
crates/slimefun-ffi/src/: lib.rs
crates/slimefun-server/: Cargo.toml
crates/slimefun-server/src/: main.rs
