[workspace]
members = [
    "crates/slimefun-core",
    "crates/slimefun-energy",
    "crates/slimefun-cargo",
    "crates/slimefun-addons",
    "crates/slimefun-ffi",
    "crates/slimefun-server",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["DrakesCraft Labs <jack@drakescraft.net>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
dashmap = "5.5"
petgraph = "0.6"
