[package]
name = "slimefun-energy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
slimefun-core = { path = "../slimefun-core" }
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
rayon.workspace = true
dashmap.workspace = true
